yaml/dev/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cncf-demo
  labels:
    app.kubernetes.io/name: cncf-demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cncf-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cncf-demo
    spec:
      containers:
      - name: main
        image: index.docker.io/thedeveloperpotato/cncf-demo:v0.0.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cncf-demo
  labels:
    app.kubernetes.io/name: cncf-demo
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cncf-demo
            port:
              number: 8080
    host: cncf-demo-dev.13.50.72.83.nip.io
---
apiVersion: v1
kind: Service
metadata:
  name: cncf-demo
  labels:
    app.kubernetes.io/name: cncf-demo
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: cncf-demo
